# bizacq-dashboard

./: .env.example  .gitignore  CLAUDE.md  config.yaml  index.html  pyproject.toml  requirements.txt
.claude/agents/: eb5-advisor.md  fact-checker.md  filter.md  financial.md  legal.md  monitor.md  ranking.md  scout.md  strategy.md
.claude/commands/: bizacq-fact-check.md
.claude/skills/crm-pipeline/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/financial-modeling/: SKILL.md
.claude/skills/legal-immigration/: SKILL.md
.claude/skills/llm-prompting/: SKILL.md
.claude/skills/plain-language/: SKILL.md
.claude/skills/public-data-sources/: SKILL.md
.claude/skills/scraping/: SKILL.md
cloudflare/: worker.js  wrangler.toml
cloudflare/.wrangler/cache/: wrangler-account.json
core/: config.py  models.py
data/: deals.json
scrapers/: fetch_bizscout.py
tests/: conftest.py  test_models.py
